k8s/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yopago-keycloak
  namespace: yopago
  labels:
    app: yopago-keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yopago-keycloak
  template:
    metadata:
      labels:
        app: yopago-keycloak
    spec:
      containers:
        - name: keycloak
          image: registry.digitalocean.com/yopago-registry/yopago-keycloak:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: yopago
  labels:
    app: yopago-keycloak
spec:
  type: ClusterIP
  selector:
    app: yopago-keycloak
  ports:
    - port: 8080
      targetPort: 8080
